[package]
name = "user_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
env_logger = "0.9"
validator = { version = "0.15", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15"
chrono = "0.4.24"
thiserror = "1.0"
bcrypt = "0.15"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.7"
